grid now visible. Img issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@ body {
     background-color: #fcfcfc;
     color:#848c91;
 }
-
+/*
 * { 
     box-sizing: border-box;
 }
-
+*/
 .hero-image {
     background-image: url("/assets/images/background.jpg");
     background-size: cover;
@@ -46,26 +46,49 @@ a {
 }
 
 /* Home page content --------------------------------------------------*/
-
+/*
 .page-content {
     margin: 50px;
-
+*/
 /* Class page grid ---------------------------------------------------*/
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 10px;
+  }
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+
 .class-page-grid {
-    display: grid inline;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-columns: 250px;
+    grid-template-rows: 300px 300px;
+    grid-template-areas: "class-description grid-image";
+    grid-gap: 15px;
+    width: 80%;
+    margin: 20px;
 }
 
-.class-description {
+.class-page-grid .class-description {
     grid-column-start: 1;
-    grid-column-end: 1;
+    background-color: aquamarine;
 }
 
-.grid-image {
+.class-page-grid .grid-image {
     grid-column-start: 2;
-    grid-column-end: 2;
+    min-height: 0;
+    object-fit: cover;
+    grid-area: grid-image;
+    max-width: 100%;
 }
 
 }
